--- a/css/desk.css
+++ b/css/desk.css
@@ -115,9 +115,9 @@
 	}
 	#contacto .boton
 	{
-		display: inline;
+		display: inline-block;
 		margin: 50;
-		top: 0;
+		top: 0; 
 	}
 	#contacto .title
 	{
